# SimpleScraper

./: .gitmodules  CMakeLists.txt
src/: main.cpp
